[package]
name = "polish"
description = "Polish is a test frammework designed to allow the construction of test-driven development processes written in Rust"
version = "0.9.6"
authors = ["Fadi Hanna Al-Kass"]
documentation = "https://docs.rs/polish"
homepage = "https://github.com/AlKass/polish"
repository = "https://github.com/AlKass/polish"
readme = "README.md"
keywords = ["Rust", "Testing", "Test-Driven"]
categories = ["development-tools::testing"]
license = "MIT"

[badges]
travis-ci = { repository = "AlKass/polish" }

[dependencies]
chrono = "0.3.0"
ansi_term = "0.9.0"
time = "0.1.37"
