[package]
name = "polish"
description = "Test-Driven Development done right"
version = "0.9.9"
authors = ["Fadi Hanna Al-Kass"]
documentation = "https://docs.rs/polish"
homepage = "https://github.com/AlKass/polish"
repository = "https://github.com/AlKass/polish"
readme = "README.md"
keywords = ["Rust", "Testing", "Test-Driven"]
categories = ["development-tools::testing"]
license = "MIT"
edition = "2021"

[badges]
github-actions = { repository = "Alkass/polish", workflow = "Rust CI" }

[dependencies]
chrono = "0.4"
ansi_term = "0.12"
